# runefumbler

./: .gitignore  README.md  dev.bat  fumbler.py  positions.json  pyproject.toml
.github/workflows/: prcheck.yml  publish.yml
runefumbler/: fumbler.py
tests/: test_class.py
webui/: .gitignore  package-lock.json  package.json  tsconfig.app.json
webui/src/: app.tsx  index.css  main.tsx
webui/src/components/: opportunity.tsx  position.tsx
webui/src/lib/: api.ts
